--- a/src/app/views/person/person-agents/person-agents.component.html
+++ b/src/app/views/person/person-agents/person-agents.component.html
@@ -23,8 +23,8 @@
                   onerror="this.src='../../../../images/placeholder.png'" (click)="onAgentClick(item)" />
               </div>
               <h4><a (click)="onAgentClick(item)">{{item.name}}</a> <span
-                  (click)="onAgentClick(item)">({{item.agentId}})</span></h4>
-              <span>{{item.city+','+item.state}}</span>
+                  (click)="onAgentClick(item)"> ({{getAddress(item)}})</span></h4>                             
+              <span>People - {{item.noOfPeople}}</span>
             </div>
           </div>
         </li>
