--- a/src/cssFiles/style.css
+++ b/src/cssFiles/style.css
@@ -499,7 +499,7 @@ ul.slide-menu li.agent-plan a {
   padding-left: 45px;
 }
 
-ul.slide-menu li.persons a {
+ul.slide-menu li.person a {
   background: url(../images/top-agents.svg) no-repeat left;
   padding-left: 45px;
 }
