--- a/src/app/views/agent/agent-associates/agent-associates.component.html
+++ b/src/app/views/agent/agent-associates/agent-associates.component.html
@@ -25,9 +25,9 @@
                 <img src="../../../../images/ic_note_profile.svg" alt="" (click)="onPersonClick(item)" />
                 <div class="dpProfile_wp proActiBg">{{item.stat}}</div>
               </div>
-              <h4>{{item.dispname}} <span>({{item.personID}})</span></h4>
+              <h4>{{item.dispname}} <span>({{getAddress(item)}})</span></h4>
               <!-- <span class="paddingTop5">{{item.jobTitle}}</span> -->
-              <span>{{getAddress(item)}}</span>
+              <span>{{getAgentName(item)}}</span>
 
 
               <span class="date">{{item.effectiveDate | slice:0:10}}</span>
