--- a/src/app/views/dashboard/recent-profiles/agents-profile/agents-profile.component.html
+++ b/src/app/views/dashboard/recent-profiles/agents-profile/agents-profile.component.html
@@ -15,9 +15,9 @@
               </div>
 
               <h4 class="topAgentsName"><a (click)="onItemClick(item)">{{item.name}}</a>
-                <span (click)="onItemClick(item)"> ({{item.entityId}})</span>
+                <span (click)="onItemClick(item)"> ({{getAddress(item)}})</span>
                 <div class="clearfix paddingTop10"></div>
-                <span>{{getAddress(item)}}</span>
+                <span>People - {{item.noOfPeople}}</span>
               </h4>
               <a class="favouritIconPosition"><img
                   src="{{checkEntityFavorite(item)?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}"
