Implement - Agent Journals

--- a/src/app/views/agent/agent-journals/agent-journals.component.html
+++ b/src/app/views/agent/agent-journals/agent-journals.component.html
@@ -32,7 +32,7 @@
                             <div class="paddingTop5"></div>
                             <span>{{ item.OfficeName }}</span>
                             <div class="paddingTop10"></div>
-                            <span [innerHTML]="getContent(item)"></span>
+                            <span class="markdown" [innerHTML]="getContent(item)"></span>
                             <div class="clearfix"></div>
                         </div>
                     </div>
